--- a/BookExchange/Properties/launchSettings.json
+++ b/BookExchange/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "BookExchange": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7005;http://localhost:5029",
       "environmentVariables": {
