Changed to MVC Database and setup controllers

--- a/BookExchange/appsettings.json
+++ b/BookExchange/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BookExchangeContext": "Server=(localdb)\\mssqllocaldb;Database=BookExchange.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
