--- a/BookExchange/BookExchange.csproj
+++ b/BookExchange/BookExchange.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Shared\DisplayTemplates\" />
     <Folder Include="wwwroot\data\images\" />
   </ItemGroup>
 
